# cpp-training

./: .gitignore  CMakeLists.txt  README.md  build.sh
smart_ptr/: CMakeLists.txt  my_shared_ptr.h  my_unique_ptr.h
tests/: CMakeLists.txt  shape.cpp  shape.h  test_smart_ptr.cpp
